--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.datasource.username=root
-spring.datasource.password=rootpwd
+spring.datasource.url=mysql://bb77948243f784:32c23b2e@us-cdbr-iron-east-01.cleardb.net/heroku_1c0436f8d9df15a?reconnect=true
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-mysql://bb77948243f784:32c23b2e@us-cdbr-iron-east-01.cleardb.net/heroku_1c0436f8d9df15a?reconnect=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
