--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://bb77948243f784:32c23b2e@us-cdbr-iron-east-01.cleardb.net/heroku_1c0436f8d9df15a?reconnect=true
+spring.datasource.url=jdbc:mysql://bb77948243f784:32c23b2e@us-cdbr-iron-east-01.cleardb.net/heroku_1c0436f8d9df15a?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
