--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>br.com.ceppantoja.cursomc</groupId>
     <artifactId>spring-boot-ionic</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>spring-boot-ionic</name>
     <description>Demo project for Spring Boot</description>
