--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
 spring.datasource.username=root
 spring.datasource.password=rootpwd
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.smtp.auth=ture
