--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.sender=ceppantoja@gmail.com
 default.recipient=ceppantoja@gmail.com
+
+jwt.secret=SequenciaCaracteresParaAssinarToken
+jwt.expiration=60000
