--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=ceppantoja@gmail.com
 default.recipient=ceppantoja@gmail.com
 
 jwt.secret=SequenciaCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=cepp-spring-ionic
+s3.region=sa-east-1
