--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,13 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>LATEST</version>
+            <version>1.11.546</version>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>LATEST</version>
+            <version>2.6</version>
         </dependency>
     </dependencies>
 
